# etcd-workbench

./: .gitattributes  .gitignore  README.md  README_ZH.md  build
app/: .gitignore  README.md  index.html  package.js  package.json  pnpm-lock.yaml  splashscreen.html  tsconfig.json  vite.config.ts
app/design/: dmg-bg.psd  logo-design.psd  logo.html
app/src/: App.vue  main.ts
app/src-tauri/: Cargo.toml  Cargo.windows.toml  build.rs  create-dmg.sh  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
app/src-tauri/icons/: icon.icns
app/src-tauri/icons/macos/: icon.icns
app/src-tauri/proto/k8s.io/api/admissionregistration/v1/: generated.proto
app/src-tauri/proto/k8s.io/api/admissionregistration/v1alpha1/: generated.proto
app/src-tauri/proto/k8s.io/api/admissionregistration/v1beta1/: generated.proto
app/src-tauri/proto/k8s.io/api/apps/v1/: generated.proto
app/src-tauri/proto/k8s.io/api/batch/v1/: generated.proto
app/src-tauri/proto/k8s.io/api/batch/v1beta1/: generated.proto
app/src-tauri/proto/k8s.io/api/coordination/v1/: generated.proto
app/src-tauri/proto/k8s.io/api/core/v1/: generated.proto
app/src-tauri/proto/k8s.io/api/discovery/v1/: generated.proto
app/src-tauri/proto/k8s.io/api/discovery/v1beta1/: generated.proto
app/src-tauri/proto/k8s.io/api/flowcontrol/v1/: generated.proto
app/src-tauri/proto/k8s.io/api/flowcontrol/v1beta1/: generated.proto
app/src-tauri/proto/k8s.io/api/flowcontrol/v1beta2/: generated.proto
app/src-tauri/proto/k8s.io/api/flowcontrol/v1beta3/: generated.proto
app/src-tauri/proto/k8s.io/api/networking/v1/: generated.proto
app/src-tauri/proto/k8s.io/api/networking/v1alpha1/: generated.proto
app/src-tauri/proto/k8s.io/api/networking/v1beta1/: generated.proto
app/src-tauri/proto/k8s.io/api/scheduling/v1/: generated.proto
app/src-tauri/proto/k8s.io/api/scheduling/v1alpha1/: generated.proto
app/src-tauri/proto/k8s.io/api/scheduling/v1beta1/: generated.proto
app/src-tauri/src/: main.rs
app/src-tauri/src/api/: connection.rs  kv.rs  lease.rs  maintenance.rs  mod.rs  role.rs  settings.rs  updater.rs  user.rs  windows.rs
app/src-tauri/src/error/: mod.rs
app/src-tauri/src/etcd/: etcd_connector.rs  etcd_connector_handler.rs  key_monitor.rs  key_watcher.rs  mod.rs  test.rs  wrapped_etcd_client.rs
app/src-tauri/src/proto/: k8s_io_api_rbac_v1.rs  k8s_io_api_storage_v1.rs  k8s_io_apimachinery_pkg_api_resource.rs  k8s_io_apimachinery_pkg_apis_meta_v1.rs  k8s_io_apimachinery_pkg_runtime.rs  mod.rs
app/src-tauri/src/proto/k8s/io/: mod.rs
app/src-tauri/src/proto/k8s/io/api/: mod.rs
app/src-tauri/src/proto/k8s/io/api/admissionregistration/: mod.rs
app/src-tauri/src/proto/k8s/io/api/admissionregistration/v1/: mod.rs
app/src-tauri/src/proto/k8s/io/api/admissionregistration/v1alpha1/: mod.rs
app/src-tauri/src/proto/k8s/io/api/admissionregistration/v1beta1/: mod.rs
app/src-tauri/src/proto/k8s/io/api/apps/v1/: mod.rs
app/src-tauri/src/proto/k8s/io/api/batch/v1/: mod.rs
app/src-tauri/src/proto/k8s/io/api/coordination/v1/: mod.rs
app/src-tauri/src/proto/k8s/io/api/core/v1/: mod.rs
app/src-tauri/src/proto/k8s/io/api/discovery/: mod.rs
app/src-tauri/src/proto/k8s/io/api/discovery/v1/: mod.rs
app/src-tauri/src/proto/k8s/io/api/discovery/v1beta1/: mod.rs
app/src-tauri/src/proto/k8s/io/api/flowcontrol/v1/: mod.rs
app/src-tauri/src/proto/k8s/io/api/networking/v1/: mod.rs
app/src-tauri/src/proto/k8s/io/api/rbac/v1/: mod.rs
app/src-tauri/src/proto/k8s/io/api/scheduling/v1/: mod.rs
app/src-tauri/src/proto/k8s/io/api/storage/v1/: mod.rs
app/src-tauri/src/proto/k8s/io/apimachinery/pkg/: mod.rs
app/src-tauri/src/proto/k8s/io/apimachinery/pkg/api/resource/: mod.rs
app/src-tauri/src/proto/k8s/io/apimachinery/pkg/apis/meta/v1/: mod.rs
app/src-tauri/src/proto/k8s/io/apimachinery/pkg/apis/meta/v1beta1/: mod.rs
app/src-tauri/src/proto/k8s/io/apimachinery/pkg/runtime/: mod.rs
app/src-tauri/src/proto/k8s/io/apimachinery/pkg/util/intstr/: mod.rs
app/src-tauri/src/ssh/: mod.rs  ssh_client.rs  ssh_tunnel.rs
app/src-tauri/src/transport/: connection.rs  event.rs  kv.rs  maintenance.rs  mod.rs  settings.rs  user.rs
app/src-tauri/src/utils/: aes_util.rs  file_util.rs  k8s_formatter.rs  mod.rs  test.rs
app/website/: index.html
doc-source/: package.json  pnpm-lock.yaml
doc-source/docs/: index.md
docker/: Dockerfile  README.md  etcd-workbench.conf  publish
docs/: 404.html  etcd-workbench-update-gitee.json  etcd-workbench-update.json  hashmap.json  index.html
docs/assets/: app.88DmVDCg.js  app.9D59Kve-.js  app.B4JPPDBD.js  app.B92k4NhU.js  app.BCITZ4dC.js  app.BDdqDAWz.js  app.BGkKWEQi.js  app.Bf93OYpm.js  app.BiRHE4JY.js  app.BjngVucB.js  app.C1MZG4E7.js  app.C7EXcya4.js  app.CYQr3_1X.js  app.Cq6fizTK.js  app.Cw0ozRFf.js  app.D3X8MLLr.js  app.D8BSfBt5.js  app.DKvg2Dsz.js  app.De53ZTry.js  app.Drp24m9Z.js  app.xL77a_3h.js  index.md.BUHDMBhp.lean.js  index.md.CCDjZEtY.lean.js  index.md.CSqMCT3m.js  index.md.D3X2Sh8g.lean.js  index.md.cxqZZXJO.js  index.md.urxPcUNc.lean.js  style.0wTwUUaI.css  style.CNhD_Lvg.css  (+14 more)
scripts/: build_app_mac_aarch.py  build_app_mac_x86.py  build_app_windows_x86.py  build_docs.py  build_web_docker.py  build_web_jar.py
server/: build.gradle
web/: .gitignore  .npmrc  auto-imports.d.ts  index.html  package.json  tsconfig.json  vite.config.ts
(+220 files in other folders)
