[package]
name = "etcd-workbench"
version = "1.1.3"
description = "Etcd Workbench"
authors = ["beifengtz"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }
prost-build = "0.13"
regex = "1.11.1"

# [target.'cfg(target_os = "macos")'.dependencies]

[dependencies]
tauri = { version = "1", features = [ "os-all", "shell-open", "window-all", "dialog-open", "dialog-save", "dialog-ask", "updater", "clipboard-write-text", "process-relaunch", "macos-private-api", "notification"] }
#fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
window-shadows = "0.2.2"

tokio = { version = "1.38.0", features = ["full"] }
log = "0.4.22"
env_logger = "0.11.3"
dashmap = "6.0.1"
etcd-client = { version = "0.14", features = [] }
lazy_static = "1.5.0"
russh = { version = "0.49.2", features = ["default"] }
uuid = "1.10.0"
md5 = "0.7.0"
base64 = "0.22.1"
async-trait = { version = "0.1.81" }
prost = "0.13"
aes = "0.8.4"

[features]
default = ["etcd-client-tls-openssl"]

# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
etcd-client-tls = ["etcd-client/tls"]
etcd-client-tls-openssl = ["etcd-client/tls-openssl-vendored"]

[profile.release]
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size, 'z' or 's'
strip = true # Remove debug symbols
